[package]
name = "Onee_Checker"
version = "1.0.1"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
md-5 = "0.11.0"
sha-1 = "0.10.1"
sha2 = "0.11.0"
sha3 = "0.11.0"
blake2 = "0.10.6"
blake3 = "1.8.5"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
rayon = "1.12.0"
console = "0.16.3"
chrono = "0.4.44"